# wgpu-blocks

./: Cargo.toml  README.md  build.rs
src/: camera.rs  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
src/engine/: gltf_loading.rs  mod.rs  model.rs  texture.rs
src/game/: instance.rs  mod.rs  uniform.rs
