[package]
name = "brickheaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"      #   windowing
env_logger = "0.9"  #   logging
log = "0.4"         #   logging
wgpu = "0.14"       #   graphics
pollster = "0.2"    #   async executor