[package]
name = "brickheaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
winit = "0.27"      #   windowing
env_logger = "0.9"  #   logging
log = "0.4"         #   logging
wgpu = "0.14"       #   graphics
pollster = "0.2"    #   async executor
bytemuck = { version = "1.4", features = [ "derive"] }    #   byte manipulation & casting
anyhow = "1.0"      #   error handling
cgmath = "0.18"     #   computer graphics math
tobj = { version = "3.2.1", features = ["async",] }

[dependencies.image]    #   handling images
version = "0.24"
default-features = false
features = ["png", "jpeg"]